[package]
name = "insigil"
version = "0.1.1"
authors = ["Robbie Huffman <robbie.huffman@gmail.com>"]

[dependencies]
time = "*"
#piston = "0.35.0"
piston = "*"
#piston2d-graphics = "0.24.0"
piston2d-graphics = "*"
piston_window = "*"
find_folder = "*"
piston2d-opengl_graphics = "0.50.0"
#piston2d-opengl_graphics = "*"
#unicode-segmentation = "1.2.0"
unicode-segmentation = "*"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
hdrsample = "3.0"

[profile.release]
lto = true

[dependencies.pistoncore-sdl2_window]
version = "0.47.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.39.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.43.0"
optional = true


[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]

